--- a/src/styles.css
+++ b/src/styles.css
@@ -1,90 +1,255 @@
 /*CONFIGURE BY COMPONENT*/
 
+html, body{
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
 body{
-    background-color: rgb(35, 61, 77);
-    min-height: 4em;
-    min-width: 5em;
+	font-family: "Quicksand", Sans-serif;
+	/*display: table;*/
 }
 
-/*Default Color*/
-h1,h2,h3,h4,h5{
-    color: white;
+
+header{
+	width: 100%;
 }
 
-.orange{
-   color: rgb(254, 127, 45);
+.logo{
+	position: fixed;
+	float: left;
+	margin: 16px 36px;
+	color : #ffffff;
+	font-weight: bold;
+	font-size: 24px;
+	letter-spacing: .12em;
+	text-transform: uppercase;
 }
 
-#header {
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Oxygen',sans-serif;
+nav{
+	position: fixed;
+	width: 100%;
 }
 
-h1{
-    font-size: 3em;
-}
-#signUpBtn{
-    color: rgb(35, 61, 77);
-    background-color : rgb(161, 193, 129);
-}
-
-#submitBtn{
-    color:rgb(254, 127, 45);
-    background-color :rgb(35, 61, 77);
-}
-#SignUp{
-    background-color: black;
-}
-#submit{
-    min-width:100%
+nav ul{
+	list-style: none;
+	background: rgb(128, 255, 128);
+	overflow: hidden;
+	color: #ffffff;
+	padding: 0px 15px;
+	margin: 0;
+	text-align: right;
+	transition: 1s;
 }
 
-#loginForm{
-    border-width: 2px;
-    border-color: white;
-    border-style: solid;
-    margin: 5%;
-    padding: 5%;
+nav ul li{
+	display: inline-block;
+	padding: 20px;
 }
-.textBtn{
-    background:none;
-    border:none;
+
+nav ul li a{
+	text-decoration: none;
+	color: #ffffff;
+	font-size: 20px;
 }
-.form{
-    margin-top: 7%;
-    margin-bottom: 5%;
+
+.menu-icon{
+	width: 100%;
+	background: rgb(128, 255, 128);
+	text-align: right;
+	box-sizing: border-box;
+	padding: 15px 24px;
+	cursor: pointer;
+	color: #ffffff;
+	display: none;
 }
-.messages{
-    margin-left: 2%;
-    margin-right: 2%;
+
+/*CAROUSEL*/
+
+#slider{
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	z-index: -1;
 }
-.input{
-    font-size: 22px;
-    margin-top: 2%;
-    text-align: center;
-    width: 50%;
+
+#slider > *{
+	position: absolute;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
 }
-.chat{
-    color:rgb(35, 61, 77);
+
+.slide1{
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),
+					  url("./images/chat1.jpeg");
+	background-size: cover;
+	background-position: center;
 }
-.chatScreen{
-    height:400px;
-    width:100%;
-    overflow: auto;
-    background-color: white;   
+
+.slide2{
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),
+					  url("./images/chat2.jpeg");
+	background-size: cover;
+	background-position: center;
 }
-.signUp{
-    border-width: 2px;
-    border-color: white;
-    border-style: solid;
-    margin: 5%;
-    padding: 5%;
+
+.slide3{
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)), 
+					  url("./images/chat3.jpeg");
+	background-size: cover;
+	background-position: center;
 }
-.sender{
-    text-align: right;
-    color: rgb(51, 147, 207);
+
+.slide4{
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),
+					  url("./images/chat4.jpeg");
+	background-size: cover;
+	background-position: center;
 }
-.yellow{
-    color: rgb(252,202,70);
+
+.slide5{
+	background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.5)),
+					  url("./images/chat5.jpeg");
+	background-size: cover;
+	background-position: center;
+}
+
+.slide-images{
+	position: absolute;
+	width: 100%;
+	height: auto;
+	z-index: -1;
+	opacity: 0;
+	transition: opacity 1s ease-in-out;
+}
+
+.displayImage{
+	/*display: block;*/
+	opacity: 1;
+}
+
+.stackImage{
+	/*Pushes current image down, to insure next image is ontop*/
+	/*This class is used in script.js*/
+	z-index: -2;
+}
+
+/*FORM*/
+
+.login-box{
+	width: 280px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	color: #ffffff;
+}
+
+.login-box h1{
+	display: inline-block;
+	font-size: 2em;
+	letter-spacing: 0.1em;
+	font-weight: bolder;
+	border-bottom: 6px solid rgb(128, 255, 128);;
+	margin-bottom: 30px;
+	padding: 13px 0;
+}
+
+.textbox{
+	display: inline-block;
+	overflow: hidden;
+	width: 100%;
+	font-size: 1em;
+	padding: 8px 0;
+	margin: 8px 0;
+	border-bottom: 1px solid;
+}
+
+.textbox i{
+	width: 26px;
+	float: left;
+	text-align: center;
+}
+
+.textbox input{
+	border: none;
+	outline: none;
+	background: none;
+	color: #ffffff;
+	font-size: 18px;
+	width: 80%;
+	margin: 0px 10px;
+}
+
+.btn{
+	width: 100%;
+	background: none;
+	border: 2px solid rgb(128, 255, 128);
+	font-size: 18px;
+	color: #ffffff;
+	margin-top: 25px;
+	padding: 5px;
+	cursor: pointer;
+	transition: 0.17s ease-in-out;
+}
+
+.btn:hover{
+	background: rgb(128, 255, 128);
+	color: #ffffff;
+}
+
+@media(max-width: 700px){
+	
+	.logo{
+		position: fixed;
+		top: 0;
+		margin-top: 16px;
+	}
+
+	nav ul{
+		max-height: 0px;
+		background: rgb(128, 255, 128);
+	}
+
+	.showing{
+		max-height: 20em;
+	}
+
+	nav ul li{
+		box-sizing: border-box;
+		width: 100%;
+		padding: 24px 0;
+		text-align: center;
+	}
+
+	.menu-icon{
+		display: block;
+	}
+}
+
+@media(max-width: 425px){
+
+	body{
+		background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
+		width: 100%;
+		overflow: hidden;
+	}
+
+	.logo{
+		font-size: 19px;
+	}
+
+	#slider{
+		opacity: 0;
+	}
+
+	.login-box{
+		top: 45%;
+	}
 }
