--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-/*CONFIGURE BY COMPONENT*/
-
 html, body{
 	margin: 0;
 	padding: 0;
@@ -8,7 +6,7 @@ html, body{
 }
 
 body{
-	font-family: 'Quicksand', sans-serif;
+	font-family: "Quicksand", Sans-serif;
 	/*display: table;*/
 }
 
@@ -52,7 +50,7 @@ nav ul li{
 nav ul li a{
 	text-decoration: none;
 	color: #ffffff;
-	font-size: 20px;
+	font-size: 18px;
 }
 
 .menu-icon{
@@ -140,20 +138,24 @@ nav ul li a{
 	z-index: -2;
 }
 
+.z-index{
+	z-index: -1;
+}
+
 /*FORM*/
 
-.login-box{
+.user-box{
 	width: 280px;
 	position: absolute;
-	top: 50%;
+	top: 55%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	color: #ffffff;
 }
 
-.login-box h1{
+.text-header{
 	display: inline-block;
-	font-size: 2em;
+	font-size: 2.4em;
 	letter-spacing: 0.1em;
 	font-weight: bolder;
 	border-bottom: 6px solid rgb(128, 255, 128);;
@@ -187,6 +189,10 @@ nav ul li a{
 	margin: 0px 10px;
 }
 
+::placeholder{
+	color: rgba(255, 255, 255, 0.5);
+}
+
 .btn{
 	width: 100%;
 	background: none;
@@ -204,6 +210,51 @@ nav ul li a{
 	color: #ffffff;
 }
 
+.img-btn{
+	display: none;
+}
+
+.profile-container{
+	text-align: center;
+	width: 100px;
+	height: 100px;
+	overflow: hidden;
+	border-radius: 50%;
+	margin: 10px 0px 15px 80px ;
+}
+
+.profile-pic{
+	cursor: pointer;
+	width: 100px;
+	height: 100px;
+}
+
+@media(min-width: 2000px){
+	.user-box{
+		font-size: 2.2em;
+		width: 450px;
+	}
+
+	.textbox{
+		margin: 15px;
+	}
+
+	.btn{
+		margin: 15px;
+		font-size: 1em;
+	}
+
+	::placeholder{
+		font-size: 1.5em;
+	}
+}
+
+@media(max-width: 768px){
+	.user-box{
+		top: 52%;
+	}
+}
+
 @media(max-width: 700px){
 	
 	.logo{
@@ -215,6 +266,7 @@ nav ul li a{
 	nav ul{
 		max-height: 0px;
 		background: rgb(128, 255, 128);
+		transition: opacity 1s ease-in-out 1s;
 	}
 
 	.showing{
@@ -238,18 +290,30 @@ nav ul li a{
 	body{
 		background-image: linear-gradient(120deg, #d4fc79 0%, #96e6a1 100%);
 		width: 100%;
-		overflow: hidden;
+		overflow: fixed;
 	}
 
 	.logo{
-		font-size: 19px;
+		font-size: 1.2em;
 	}
 
 	#slider{
 		opacity: 0;
 	}
 
-	.login-box{
-		top: 45%;
+	.user-box{
+		top: 53%; 
+		font-size: 0.7em;
+		width: 230px;
+	}
+
+	.profile-container{
+		width: 65px;
+		height: 65px;
+	}
+
+	.profile-pic{
+		width: 65px;
+		height: 65px;
 	}
 }
